--- a/src/TechJobs/Views/List/Jobs.cshtml
+++ b/src/TechJobs/Views/List/Jobs.cshtml
@@ -4,4 +4,20 @@
 
 @{ 
     // TODO #3 - Use the same list display from Views/Search/Index.cshtml 
+<table class="job-listing">
+
+    @if (ViewBag.jobs != null)
+    {
+        foreach (Dictionary<string,string> job in ViewBag.jobs)
+        {
+            foreach (KeyValuePair<string,string> result in job)
+            {
+                <tr>
+                    <td>@result.Key</td>
+                    <td>@result.Value</td>
+                </tr>
+            }
+        }
+    }
+ </table>
 }
